--- a/assets/main.scss
+++ b/assets/main.scss
@@ -31,12 +31,6 @@
   margin-left: 0.5em;
 }
 
-a.page-link,
-a.page-link:active,
-a.page-link:visited {
-  color: white;
-}
-
 h2 {
   font-family: 'Nunito', sans-serif;
   font-weight: bold;
